--- a/models/bedrock/provider/bedrock.yaml
+++ b/models/bedrock/provider/bedrock.yaml
@@ -132,10 +132,6 @@ provider_credential_schema:
       placeholder:
         zh_Hans: 在此输入您的 Bedrock Endpoint URL, 如：https://123456.cloudfront.net
         en_US: Enter your Bedrock Endpoint URL, e.g. https://123456.cloudfront.net
-      help:
-        text:
-          en_US: Custom endpoint URL for Bedrock API (cannot be used with Proxy URL)
-          zh_Hans: Bedrock API 的自定义端点 URL（不能与代理 URL 同时使用）
     - variable: model_for_validation
       required: false
       label:
@@ -143,8 +139,8 @@ provider_credential_schema:
         zh_Hans: 可用模型名称
       type: text-input
       placeholder:
-        en_US: A model you have access to (e.g. amazon.nova-pro-v1:0) for validation.
-        zh_Hans: 为了进行验证，请输入一个您可用的模型名称 (例如：amazon.nova-pro-v1:0)
+        en_US: A model you have access to (e.g. amazon.titan-text-lite-v1) for validation.
+        zh_Hans: 为了进行验证，请输入一个您可用的模型名称 (例如：amazon.titan-text-lite-v1)
     - variable: bedrock_proxy_url
       label:
         en_US: Bedrock Proxy URL
@@ -155,8 +151,7 @@ provider_credential_schema:
         en_US: Enter your proxy address (e.g. 127.0.0.1:7890)
       help:
         text:
-          en_US: Proxy address for Bedrock API connections (cannot be used with Endpoint URL)
-          zh_Hans: Bedrock API 连接的代理地址（不能与端点 URL 同时使用）
+          en_US: Proxy address for Bedrock API connections
 models:
   llm:
     predefined:
